autofac and localization working now

--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="IdentityConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=CC_Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ChallengesConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=CC_Identity;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="IdentityConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+    <add name="ChallengesConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Challenges;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -39,9 +39,24 @@
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <serviceHostingEnvironment minFreeMemoryPercentageToActivateService="0">
+      <serviceActivations>
+        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="ChallengesService.svc" service="Business.Challenges.IChallengesService, Business.Challenges" />
+      </serviceActivations>
+    </serviceHostingEnvironment>
+  </system.serviceModel>
 </configuration>
