--- a/Challenging Challenges/packages.config
+++ b/Challenging Challenges/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
+  <package id="Autofac.Wcf" version="4.0.0" targetFramework="net452" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="bootstrap-markdown.less" version="2.7.0.2" targetFramework="net452" />
   <package id="CloudinaryDotNet" version="1.0.22" targetFramework="net452" />
