--- a/Data.Challenges/Data.Challenges.csproj
+++ b/Data.Challenges/Data.Challenges.csproj
@@ -58,24 +58,23 @@
     <Compile Include="Entities\Tag.cs" />
     <Compile Include="Enums\Language.cs" />
     <Compile Include="Enums\Section.cs" />
-    <Compile Include="Migrations\201604031554100_Initial.cs" />
-    <Compile Include="Migrations\201604031554100_Initial.Designer.cs">
-      <DependentUpon>201604031554100_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\201604240110407_Initial.cs" />
+    <Compile Include="Migrations\201604240110407_Initial.Designer.cs">
+      <DependentUpon>201604240110407_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\IChallengesUnitOfWork.cs" />
+    <Compile Include="Context\IChallengesUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201604031554100_Initial.resx">
-      <DependentUpon>201604031554100_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201604240110407_Initial.resx">
+      <DependentUpon>201604240110407_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Data.Common\Data.Common.csproj">
       <Project>{610fe3e7-21b8-4bbd-865f-32ea6ba15784}</Project>
