--- a/Challenging Challenges/Web.config
+++ b/Challenging Challenges/Web.config
@@ -8,6 +8,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="IdentityConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+    <add name="ChallengesConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Challenges;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
