identity works now, separated partly

--- a/Business.Challenges/Business.Challenges.csproj
+++ b/Business.Challenges/Business.Challenges.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ChallengesService.cs" />
     <Compile Include="IChallengesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AchievementViewModel.cs" />
     <Compile Include="ViewModels\ChallengeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
