--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -56,6 +56,7 @@
     <serviceHostingEnvironment minFreeMemoryPercentageToActivateService="0">
       <serviceActivations>
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="ChallengesService.svc" service="Business.Challenges.IChallengesService, Business.Challenges" />
+        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="IdentityService.svc" service="Business.Identity.IIdentityService, Business.Identity" />
       </serviceActivations>
     </serviceHostingEnvironment>
   </system.serviceModel>
