--- a/Business.Host/packages.config
+++ b/Business.Host/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net452" />
   <package id="Autofac.Wcf" version="4.0.0" targetFramework="net452" />
+  <package id="AutoMapper" version="4.2.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
