--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -57,6 +57,7 @@
       <serviceActivations>
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="ChallengesService.svc" service="Business.Challenges.IChallengesService, Business.Challenges" />
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="IdentityService.svc" service="Business.Identity.IIdentityService, Business.Identity" />
+        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="AchievementsService.svc" service="Business.Challenges.IAchievementsService, Business.Challenges" />
       </serviceActivations>
     </serviceHostingEnvironment>
   </system.serviceModel>
