--- a/Business.Challenges/Business.Challenges.csproj
+++ b/Business.Challenges/Business.Challenges.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -73,11 +81,15 @@
   <ItemGroup>
     <Compile Include="ChallengesService.cs" />
     <Compile Include="IChallengesService.cs" />
+    <Compile Include="Mappings\ChallengesMapProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\AchievementViewModel.cs" />
     <Compile Include="ViewModels\ChallengeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business.Identity\Business.Identity.csproj">
+      <Project>{B248D183-63B4-41F6-8182-E532200D5AEE}</Project>
+      <Name>Business.Identity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Data.Challenges\Data.Challenges.csproj">
       <Project>{3BC289F6-2AE2-4CD3-A5D4-AA6A549BCA9A}</Project>
       <Name>Data.Challenges</Name>
@@ -85,6 +97,10 @@
     <ProjectReference Include="..\Data.Common\Data.Common.csproj">
       <Project>{610FE3E7-21B8-4BBD-865F-32EA6BA15784}</Project>
       <Name>Data.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Data.Identity\Data.Identity.csproj">
+      <Project>{6780FCD1-1B0C-4410-94B7-91C98B2333A1}</Project>
+      <Name>Data.Identity</Name>
     </ProjectReference>
     <ProjectReference Include="..\Shared.Framework\Shared.Framework.csproj">
       <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
