--- a/Challenging Challenges/Web.config
+++ b/Challenging Challenges/Web.config
@@ -17,6 +17,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DefaultMainPageCount" value="10" />
+    <add key="BusinessAddress" value="http://localhost:64242/" />
+    <add key="TotalChallengesFetchedNumber" value="10" />
   </appSettings>
   <system.web>
     <caching>
@@ -105,4 +108,15 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding openTimeout="00:05:00"
+                 closeTimeout="00:05:00"
+                 sendTimeout="00:05:00"
+                 receiveTimeout="00:05:00">
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+  </system.serviceModel>
 </configuration>
