--- a/Business.Achievements/Business.Achievements.csproj
+++ b/Business.Achievements/Business.Achievements.csproj
@@ -51,9 +51,9 @@
     <Compile Include="ViewModels\AchievementType.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Data.Challenges\Data.Challenges.csproj">
-      <Project>{3BC289F6-2AE2-4CD3-A5D4-AA6A549BCA9A}</Project>
-      <Name>Data.Challenges</Name>
+    <ProjectReference Include="..\Business.Challenges\Business.Challenges.csproj">
+      <Project>{532F5E1B-117C-4131-A9A7-8B96B3CEE237}</Project>
+      <Name>Business.Challenges</Name>
     </ProjectReference>
     <ProjectReference Include="..\Data.Common\Data.Common.csproj">
       <Project>{610FE3E7-21B8-4BBD-865F-32EA6BA15784}</Project>
@@ -63,8 +63,13 @@
       <Project>{6780FCD1-1B0C-4410-94B7-91C98B2333A1}</Project>
       <Name>Data.Identity</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared.Framework\Shared.Framework.csproj">
+      <Project>{150EBD2E-0220-4E95-A42E-A5E14E0DB467}</Project>
+      <Name>Shared.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
