--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
@@ -57,7 +61,8 @@
       <serviceActivations>
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="ChallengesService.svc" service="Business.Challenges.IChallengesService, Business.Challenges" />
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="IdentityService.svc" service="Business.Identity.IIdentityService, Business.Identity" />
-        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="AchievementsService.svc" service="Business.Challenges.IAchievementsService, Business.Challenges" />
+        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="AchievementsService.svc" service="Business.Achievements.IAchievementsService, Business.Achievements" />
+        <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="SearchIndexService.svc" service="Business.SearchIndex.ISearchIndexService, Business.SearchIndex" />
       </serviceActivations>
     </serviceHostingEnvironment>
   </system.serviceModel>
