--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -8,6 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <!--Env strings-->
+  <!--<connectionStrings>
+    <add name="IdentityConnection" connectionString="Data Source=mssql4.gear.host;Initial Catalog=ccidentity;Persist Security Info=True;User ID=ccidentity;Password=Wn9aW-3UiA?2" providerName="System.Data.SqlClient" />
+    <add name="ChallengesConnection" connectionString="Data Source=mssql4.gear.host;Initial Catalog=ccchallenges;Persist Security Info=True;User ID=ccchallenges;Password=Xa330_!3H3F7" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <!--Local strings-->
   <connectionStrings>
     <add name="IdentityConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Identity;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
     <add name="ChallengesConnection" connectionString="Data Source=NIKITA-PC;Initial Catalog=CC_Challenges;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
