--- a/Challenging Challenges/Presentation.Host.csproj
+++ b/Challenging Challenges/Presentation.Host.csproj
@@ -513,20 +513,12 @@
     <Content Include="Content\Home\index.scss" />
     <Content Include="Content\scrollbars.scss" />
     <Content Include="Content\Achievements\style.scss" />
-    <None Include="Properties\PublishProfiles\cc - FTP %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\cc - FTP %283%29.pubxml" />
-    <None Include="Properties\PublishProfiles\cc - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\cc - Web Deploy %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\cc - Web Deploy %283%29.pubxml" />
-    <None Include="Properties\PublishProfiles\cc - Web Deploy.pubxml" />
-    <None Include="Properties\PublishProfiles\cchallenges - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\cchallenges - Web Deploy.pubxml" />
-    <None Include="Properties\PublishProfiles\LocalDeploy.pubxml" />
     <Content Include="Scripts\ckeditor\plugins\codesnippet\lib\highlight\CHANGES.md" />
     <Content Include="Scripts\ckeditor\plugins\codesnippet\lib\highlight\LICENSE" />
     <Content Include="Scripts\ckeditor\plugins\codesnippet\lib\highlight\README.md" />
     <Content Include="Scripts\ckeditor\plugins\codesnippet\lib\highlight\README.ru.md" />
-    <None Include="Properties\PublishProfiles\somee.pubxml" />
+    <None Include="Properties\PublishProfiles\ccnew - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ccnew - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\Challenges\dynamic-fields.js" />
     <Content Include="Scripts\ckeditor\adapters\jquery.js" />
