--- a/Business.Host/Business.Host.csproj
+++ b/Business.Host/Business.Host.csproj
@@ -128,6 +128,8 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ccbusiness - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\ccbusiness - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
