--- a/Data.Challenges/Data.Challenges.csproj
+++ b/Data.Challenges/Data.Challenges.csproj
@@ -71,6 +71,10 @@
     <Compile Include="Migrations\201604252353140_NightkyFixes_ChangeDbSchema.Designer.cs">
       <DependentUpon>201604252353140_NightkyFixes_ChangeDbSchema.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605032000588_Comment_AddLinkToUser.cs" />
+    <Compile Include="Migrations\201605032000588_Comment_AddLinkToUser.Designer.cs">
+      <DependentUpon>201605032000588_Comment_AddLinkToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\IChallengesUnitOfWork.cs" />
@@ -88,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201604252353140_NightkyFixes_ChangeDbSchema.resx">
       <DependentUpon>201604252353140_NightkyFixes_ChangeDbSchema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605032000588_Comment_AddLinkToUser.resx">
+      <DependentUpon>201605032000588_Comment_AddLinkToUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
