--- a/Challenging Challenges/Web.config
+++ b/Challenging Challenges/Web.config
@@ -21,6 +21,11 @@
     <add key="BusinessAddress" value="http://localhost:64242/" />
     <!--<add key="BusinessAddress" value="http://ccbusiness.gear.host/" />-->
     <add key="TotalChallengesFetchedNumber" value="10" />
+    <add key="SendGridMailAddress" value="smtp.sendgrid.net" />
+    <add key="SendGridUserName" value="c.challenges" />
+    <add key="SendGridPassword" value="1595001002004sekret" />
+    <add key="SendGridSentFromEmail" value="noreply@cchallenges.com" />
+    <add key="SendGridSentFromName" value="Nikita D." />
   </appSettings>
   <system.web>
     <caching>
