--- a/Business.Challenges/Business.Challenges.csproj
+++ b/Business.Challenges/Business.Challenges.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
@@ -88,17 +92,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChallengesService.cs" />
+    <Compile Include="BusinessChallengesModule.cs" />
     <Compile Include="IChallengesService.cs" />
     <Compile Include="Mappings\ChallengesMapProfile.cs" />
+    <Compile Include="Private\ChallengeSolutionDispatcher.cs" />
+    <Compile Include="ViewModels\ChallengeSolveResult.cs" />
+    <Compile Include="Private\ChallengeSolvingStrategyBase.cs" />
+    <Compile Include="Private\IChallengeSolutionDispatcher.cs" />
+    <Compile Include="Private\IChallengeSolvingStrategy.cs" />
+    <Compile Include="Private\TestCaseChallengeSolvingStrategy.cs" />
+    <Compile Include="Private\TextChallengeSolvingStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ChallengeFullViewModel.cs" />
     <Compile Include="ViewModels\ChallengeInfoViewModel.cs" />
     <Compile Include="ViewModels\ChallengesDescriptionViewModel.cs" />
+    <Compile Include="ViewModels\ChallengeType.cs" />
     <Compile Include="ViewModels\ChallengeViewModel.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\SolverViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business.CodeExecution\Business.CodeExecution.csproj">
+      <Project>{96305162-a7c2-4e9b-adb3-d9b0946874eb}</Project>
+      <Name>Business.CodeExecution</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Business.Identity\Business.Identity.csproj">
       <Project>{B248D183-63B4-41F6-8182-E532200D5AEE}</Project>
       <Name>Business.Identity</Name>
