--- a/Challenging Challenges/Web.config
+++ b/Challenging Challenges/Web.config
@@ -117,10 +117,7 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding openTimeout="00:05:00"
-                 closeTimeout="00:05:00"
-                 sendTimeout="00:05:00"
-                 receiveTimeout="00:05:00">
+        <binding openTimeout="00:05:00" closeTimeout="00:05:00" sendTimeout="00:05:00" receiveTimeout="00:05:00">
         </binding>
       </wsHttpBinding>
     </bindings>
