fuck with dependencies. unit of works and services are now single per session....

--- a/Business.Host/Web.config
+++ b/Business.Host/Web.config
@@ -42,7 +42,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -63,7 +63,7 @@
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
-    <serviceHostingEnvironment minFreeMemoryPercentageToActivateService="0">
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true">
       <serviceActivations>
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="ChallengesService.svc" service="Business.Challenges.IChallengesService, Business.Challenges" />
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="IdentityService.svc" service="Business.Identity.IIdentityService, Business.Identity" />
@@ -71,5 +71,27 @@
         <add factory="Autofac.Integration.Wcf.AutofacServiceHostFactory, Autofac.Integration.Wcf" relativeAddress="SearchIndexService.svc" service="Business.SearchIndex.ISearchIndexService, Business.SearchIndex" />
       </serviceActivations>
     </serviceHostingEnvironment>
-  </system.serviceModel>
+    <services>
+      <service name="Business.Challenges.ChallengesService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint address="" binding="wsHttpBinding" contract="Business.Challenges.IChallengesService"/>
+      </service>
+      <service name="Business.Identity.IdentityService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint address="" binding="wsHttpBinding" contract="Business.Identity.IIdentityService"/>
+      </service>
+      <service name="Business.Achievements.AchievementsService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint address="" binding="wsHttpBinding" contract="Business.Achievements.IAchievementsService"/>
+      </service>
+      <service name="Business.SearchIndex.SearchIndexService" behaviorConfiguration="DefaultServiceBehaviour">
+        <endpoint address="" binding="wsHttpBinding" contract="Business.SearchIndex.ISearchIndexService"/>
+      </service>
+    </services>
+    
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="DefaultServiceBehaviour">
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    </system.serviceModel>
 </configuration>
