--- a/Business.CodeExecution/Business.CodeExecution.csproj
+++ b/Business.CodeExecution/Business.CodeExecution.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Business.CodeExecution</RootNamespace>
     <AssemblyName>Business.CodeExecution</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.5, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
@@ -57,9 +58,7 @@
     <Compile Include="ICodeExecutor.cs" />
     <Compile Include="Private\CodeExecutionRequestData.cs" />
     <Compile Include="Private\CodeExecutionStatus.cs" />
-    <Compile Include="Private\CookieAwareWebClient.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Private\CookieAwareWebClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CodeExecutionRequest.cs" />
     <Compile Include="ViewModels\CodeExecutionResponse.cs" />
